--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 addition, for all the products under EuphoriaHsüan Studio, you will get the premium user membership.
                 <br><br>
                 <br><br><br>
-                <a href="public/JoinUs/" class="animate__animated animate__backInRight BtnJoin" id="btnJoin">
+                <a href="public/404/" class="animate__animated animate__backInRight BtnJoin" id="btnJoin">
                     <span class="fontShakeTikTok" style="font-size: 1.2em;" data-glitch="Join Us Now!">Join Us
                         Now!</span>
                     <svg width="34" height="34" viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
