--- a/unixa/g1/index.html
+++ b/unixa/g1/index.html
@@ -105,7 +105,7 @@
         left:50%;
         transform:translate(-50%,-50%);
         font-size:3em;
-        font-family: 'Permanent Marker', cursive;
+        font-family: 'Poppins', sans-serif;
     }
     
     </style>
