--- a/unixa/g1/index.html
+++ b/unixa/g1/index.html
@@ -121,7 +121,7 @@
         <div class="main">
             <p class="title">[G1] Exam results</p>
             <div class="grade">
-                <p class="num" id="Num" style="color:green">NaN</p>
+                <p class="num" id="Num" style="color:red">19</p>
             </div>
 <p class="Time" id="time">Current Time Loading...</p>
 
